--- a/src/openforms/payments/contrib/ogone/tests/files/vcr_cassettes/OgoneClientTest/OgoneClientTest.test_payment_request_valid_order_id.yaml
+++ b/src/openforms/payments/contrib/ogone/tests/files/vcr_cassettes/OgoneClientTest/OgoneClientTest.test_payment_request_valid_order_id.yaml
@@ -113,15 +113,15 @@ interactions:
         AlertERR_96 = \"CVC is niet aanwezig en geen reden waarom.\";\r\n\r\n\r\n//-->\r\n\r\n\r\n</script>\r\n\r\n\t\t\t\t<form
         name=\"IDEALOGFORM\" action=\"https&#58;//ogone.test.v-psp.com/ncol/test/orderstandard_UTF8.asp\"
         method=\"POST\" onSubmit=\"return my_submitAndDisable(this,0);\">\r\n\t\t\t\t\t<input
-        type=\"hidden\" name=\"CSRFKEY\" value=\"AB38CDE7F21BF630879724E182CA68A3FE59DFBF\"
-        >\r\n<input type=\"hidden\" name=\"CSRFTS\" value=\"20240916153645\" >\r\n<input
+        type=\"hidden\" name=\"CSRFKEY\" value=\"7DD521C0D4B0F5D5CF009BAD40A252F2DCDFD4D5\"
+        >\r\n<input type=\"hidden\" name=\"CSRFTS\" value=\"20241022124002\" >\r\n<input
         type=\"hidden\" name=\"CSRFSP\" value=\"/ncol/test/orderstandard_utf8.asp\"
         >\r\n\t\t\t\t\t<input type=\"hidden\" name=\"WIN3DS\" value=\"\">\r\n\t\t\t\t\t<input
         type=\"hidden\" name=\"PMListType\" value=\"2\">\r\n\t\t\t\t\t<input type=\"hidden\"
         name=\"branding\" value=\"OGONE\">\r\n\t\t\t\t\t<input type=\"hidden\" name=\"PM\"
-        value=\"\">\r\n\t\t\t\t\t<input type=\"hidden\" name=\"payid\" value=\"4264862931\">\r\n\t\t\t\t\t<input
-        type=\"hidden\" name=\"hash_param\" value=\"CC8277C988FD738EEC31D5B3D7AFF3DB3533585D\">\r\n
-        \                   <input type=\"hidden\" name=\"CorrelationID\" value=\"D7B8C976-D8AC-46EB-8984-C4BB9DBC4031\">\r\n\t\t\t\t\t\t\t\t<input
+        value=\"\">\r\n\t\t\t\t\t<input type=\"hidden\" name=\"payid\" value=\"4276811961\">\r\n\t\t\t\t\t<input
+        type=\"hidden\" name=\"hash_param\" value=\"22AC9DDEC3773D3491077A42BADD5D3C01C457CF\">\r\n
+        \                   <input type=\"hidden\" name=\"CorrelationID\" value=\"3A229308-3472-4C07-8941-E8CDE3B7263D\">\r\n\t\t\t\t\t\t\t\t<input
         type=\"hidden\" name=\"hash_post\" value=\"\">\r\n\t\t\t\t\t\t\t\t<input type=\"hidden\"
         name=\"allowcorrection\" value=\"\">\r\n\t\t\t\t\t<input type=\"hidden\" name=\"thisstep\"
         value=\"1\">\r\n\t\t\t\t\t<input type=\"hidden\" name=\"idealstep\" value=\"2\">\r\n\t\t\t\t\t<input
@@ -149,12 +149,12 @@ interactions:
         style=\"behavior:url(#default#clientCaps)\">\r\n\t<tr><td class=\"ncollogoc\"
         valign=\"middle\" align=\"center\" width=\"33%\"><img border=\"0\" src=\"https&#58;//ogone.test.v-psp.com/images/ING.gif\"
         hspace=\"5\" alt=\"ING\" title=\"ING\" id=\"NCOLACQ\"></td><td class=\"ncollogoc\"
-        valign=\"middle\" align=\"center\" width=\"33%\"><a href=\"https&#58;//ogone.test.v-psp.com/ncol/PSPabout.asp?lang=3&pspid=maykinmedia&branding=OGONE&CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&CSRFKEY=C41674F3FD7E2EC7A04F718B4310F6152AED29DA&CSRFTS=20240916153645\"
+        valign=\"middle\" align=\"center\" width=\"33%\"><a href=\"https&#58;//ogone.test.v-psp.com/ncol/PSPabout.asp?lang=3&pspid=maykinmedia&branding=OGONE&CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&CSRFKEY=7F927FE5D7ACEB0249BE5EFE027D2BE4A49B8EA9&CSRFTS=20241022124002\"
         target=\"_blank\"><img border=\"0\" src=\"https&#58;//ogone.test.v-psp.com/images/pp_WorldLine3.png\"
         alt=\"Betaling verwerkt door Worldline\" title=\"Betaling verwerkt door Worldline\"
-        vspace=\"2\" id=\"NCOLPP\"></a><br><small><small><a class=\"bottom\" href=\"https&#58;//worldline.com/&#63;lang=3&amp;pspid=maykinmedia&amp;branding=OGONE&amp;CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&amp;CSRFKEY=A2C167039A999A22BBB82C2C41743CA355824C4C&amp;CSRFTS=20240916153645\"
-        target=\"_blank\">Over Worldline</a> |<a class=\"bottom\" href=\"https&#58;//ogone.test.v-psp.com/ncol/security.asp&#63;lang=3&amp;mode=STD&amp;branding=OGONE&amp;CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&amp;CSRFKEY=788085B9AB752937AE595478ACE51F95676E0538&amp;CSRFTS=20240916153645\"
-        target=\"_blank\">Veiligheid<!--Security--></a>| <a class=\"bottom\" href=\"https&#58;//worldline.com/en/home/main-navigation/git/office-locations.html&#63;lang=3&amp;mode=STD&amp;branding=OGONE&amp;CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&amp;CSRFKEY=441EE15F018D038AA3006AF0C73708A4CB73CAC9&amp;CSRFTS=20240916153645\"
+        vspace=\"2\" id=\"NCOLPP\"></a><br><small><small><a class=\"bottom\" href=\"https&#58;//worldline.com/&#63;lang=3&amp;pspid=maykinmedia&amp;branding=OGONE&amp;CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&amp;CSRFKEY=A9615F0B78CA77434D86E2594DEA4E7E3BE6BDBB&amp;CSRFTS=20241022124003\"
+        target=\"_blank\">Over Worldline</a> |<a class=\"bottom\" href=\"https&#58;//ogone.test.v-psp.com/ncol/security.asp&#63;lang=3&amp;mode=STD&amp;branding=OGONE&amp;CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&amp;CSRFKEY=5B8935774937DDD9FC71435CAA5235E5F460B7FD&amp;CSRFTS=20241022124003\"
+        target=\"_blank\">Veiligheid<!--Security--></a>| <a class=\"bottom\" href=\"https&#58;//worldline.com/en/home/main-navigation/git/office-locations.html&#63;lang=3&amp;mode=STD&amp;branding=OGONE&amp;CSRFSP=%2Fncol%2Ftest%2Forderstandard%5Futf8%2Easp&amp;CSRFKEY=F5E2767195A1F149AE98BF8172040CF80D44DF2A&amp;CSRFTS=20241022124003\"
         target=\"_blank\">Wettelijke informatie<!--Legal--></a></small></small></td><td
         class=\"ncollogoc\" valign=\"middle\" align=\"center\" width=\"33%\">&nbsp;</td></tr>\r\n\t\t<tr>\r\n\t\t\t\t<td
         class=ncollogoc align=\"center\" colspan=\"3\">\r\n\t\t\t\t\t\t<center>\r\n\t\t\t\t\t\t\t<table
@@ -163,15 +163,15 @@ interactions:
         method=\"POST\" action=\"https&#58;//ogone.test.v-psp.com/ncol/test/Order_Cancel_UTF8.asp\"
         id=form3 name=form3 onsubmit=\"return(window.confirm('Weet u zeker dat u deze
         transactie wilt annuleren&#63;'))\"  style=\"margin-bottom:0px;\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t<input
-        type=\"hidden\" name=\"CSRFKEY\" value=\"1E39841AB7A5F230835152B1600D40B00F0B09E3\"
-        >\r\n<input type=\"hidden\" name=\"CSRFTS\" value=\"20240916153645\" >\r\n<input
+        type=\"hidden\" name=\"CSRFKEY\" value=\"7AEDFEA5B70188EF12B278CF62E451CB20BB954E\"
+        >\r\n<input type=\"hidden\" name=\"CSRFTS\" value=\"20241022124003\" >\r\n<input
         type=\"hidden\" name=\"CSRFSP\" value=\"/ncol/test/orderstandard_utf8.asp\"
-        >\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input type=\"hidden\" name=\"payid\" value=\"4264862931\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
+        >\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input type=\"hidden\" name=\"payid\" value=\"4276811961\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
         type=\"hidden\" name=\"ownerZIP\" value=\"\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
         type=\"hidden\" name=\"owneraddress\" value=\"\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
         type=\"hidden\" name=\"alias\" value=\"\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
         type=\"hidden\" name=\"aliasoperation\" value=\"\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
-        type=\"hidden\" name=\"hash_param\" value=\"CC8277C988FD738EEC31D5B3D7AFF3DB3533585D\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
+        type=\"hidden\" name=\"hash_param\" value=\"22AC9DDEC3773D3491077A42BADD5D3C01C457CF\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<input
         type=\"hidden\" name=\"branding\" value=\"OGONE\">\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t<small><input
         class=ncol ID=\"ncol_cancel\" type=\"submit\" name=\"cancel\" value=\"Annuleren\"></small><!--Cancel-->\r\n\t\t\t\t\t\t\t\t\t\t\t\t\t</form>\r\n\t\t\t\t\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t\t\t\t\t\t</td>\r\n\t\t\t\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t\t\t\t</tr>\r\n\t\t\t\t\t\t\t</table>\r\n\t\t\t\t\t\t</center>\r\n\t\t\t\t</td>\r\n\r\n\t\t</tr>\r\n\t\t\r\n\r\n</table>\r\n</div>\r\n</div>\r\n</body>\r\n</html>"
     headers:
@@ -182,14 +182,16 @@ interactions:
       content-type:
       - text/html; Charset=utf-8
       date:
-      - Mon, 16 Sep 2024 13:36:45 GMT
+      - Tue, 22 Oct 2024 10:40:02 GMT
       expires:
-      - Mon, 16 Sep 2024 13:35:43 GMT
+      - Tue, 22 Oct 2024 10:39:02 GMT
       set-cookie:
-      - sessionTest=2441fd6f-b56d-4a41-8363-880e0674871b; path=/ncol/test/; Secure;
+      - sessionTest=87d9cf5f-3164-4765-a9ec-5adef1cb4c2e; path=/ncol/test/; Secure;
         HttpOnly
       strict-transport-security:
       - max-age=16000000; includeSubDomains; preload;
+      x-content-type-options:
+      - nosniff
     status:
       code: 200
       message: OK
