--- a/src/openforms/contrib/objects_api/tests/files/vcr_cassettes/ObjectsAPIInitialDataOwnershipValidatorTests/setUpTestData.yaml
+++ b/src/openforms/contrib/objects_api/tests/files/vcr_cassettes/ObjectsAPIInitialDataOwnershipValidatorTests/setUpTestData.yaml
@@ -1,6 +1,8 @@
 interactions:
 - request:
-    body: null
+    body: '{"type": "http://objecttypes-web:8000/api/v2/objecttypes/8faed0fa-7864-4409-aa6d-533a37616a9e",
+      "record": {"typeVersion": 1, "data": {"bsn": "111222333", "foo": "bar"}, "startAt":
+      "2024-10-29"}}'
     headers:
       Accept:
       - '*/*'
@@ -12,16 +14,20 @@ interactions:
       - keep-alive
       Content-Crs:
       - EPSG:4326
+      Content-Length:
+      - '194'
+      Content-Type:
+      - application/json
       User-Agent:
       - python-requests/2.32.2
-    method: GET
-    uri: http://localhost:8002/api/v2/objects/d36124c0-752e-48a7-a724-bf3241a2e646
+    method: POST
+    uri: http://localhost:8002/api/v2/objects
   response:
     body:
       string: '{"url":"http://objects-web:8000/api/v2/objects/d36124c0-752e-48a7-a724-bf3241a2e646","uuid":"d36124c0-752e-48a7-a724-bf3241a2e646","type":"http://objecttypes-web:8000/api/v2/objecttypes/8faed0fa-7864-4409-aa6d-533a37616a9e","record":{"index":1,"typeVersion":1,"data":{"bsn":"111222333","foo":"bar"},"geometry":null,"startAt":"2024-10-29","endAt":null,"registrationAt":"2024-10-29","correctionFor":null,"correctedBy":null}}'
     headers:
       Allow:
-      - GET, PUT, PATCH, DELETE, HEAD, OPTIONS
+      - GET, POST, HEAD, OPTIONS
       Connection:
       - keep-alive
       Content-Crs:
@@ -33,7 +39,9 @@ interactions:
       Cross-Origin-Opener-Policy:
       - same-origin
       Date:
-      - Tue, 29 Oct 2024 13:38:52 GMT
+      - Tue, 29 Oct 2024 13:38:51 GMT
+      Location:
+      - http://localhost:8002/api/v2/objects/d36124c0-752e-48a7-a724-bf3241a2e646
       Referrer-Policy:
       - same-origin
       Server:
@@ -45,6 +53,6 @@ interactions:
       X-Frame-Options:
       - DENY
     status:
-      code: 200
-      message: OK
+      code: 201
+      message: Created
 version: 1
