--- a/requirements/base.in
+++ b/requirements/base.in
@@ -86,7 +86,7 @@ elastic-apm  # Elastic APM integration
 flower # task monitoring
 
 # Common Ground integration
-zgw-consumers
+zgw-consumers[setup-configuration]
 
 # Anti virus scan
 clamd
