:whale: [#4788] Disable setup_config command in upgrade tests
to avoid having to bring up the Open Zaak and Objects/Objecttypes docker compose stacks for the CI tests to simulate upgrading Open Forms

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -442,7 +442,8 @@ jobs:
     needs:
       - docker_build_setup
       - docker_build
-
+    env:
+      RUN_SETUP_CONFIG: "False"  # Disable running the setup_configuration
     name: Simulate upgrading instances
     runs-on: ubuntu-latest
     strategy:
