--- a/docker/setup_configuration/services.yaml
+++ b/docker/setup_configuration/services.yaml
@@ -1,28 +1,28 @@
-ZGW_CONSUMERS_CONFIG_ENABLE: True
-ZGW_CONSUMERS:
+zgw_consumers_config_enable: True
+zgw_consumers:
   services:
-  - slug: objecttypen-test
+  - identifier: objecttypen-test
     label: Objecttypen API test
     api_root: http://objecttypes-web:8000/api/v2/
     api_type: orc
     auth_type: api_key
     header_key: Authorization
     header_value: Token 171be5abaf41e7856b423ad513df1ef8f867ff48
-  - slug: objecten-test
+  - identifier: objecten-test
     label: Objecten API test
     api_root: http://objects-web:8000/api/v2/
     api_type: orc
     auth_type: api_key
     header_key: Authorization
     header_value: Token 7657474c3d75f56ae0abd0d1bf7994b09964dca9
-  - slug: documenten-test
+  - identifier: documenten-test
     label: Documenten API test
     api_root: http://openzaak-web.local:8000/documenten/api/v1/
     api_type: drc
     auth_type: zgw
     client_id: test_client_id
     secret: test_secret_key
-  - slug: catalogi-test
+  - identifier: catalogi-test
     label: Catalogi API test
     api_root: http://openzaak-web.local:8000/catalogi/api/v1/
     api_type: ztc
