:alien: [#4787] Changes according to setup-configuration lib changes
* setup_configuration now only takes one yaml file as a source
* remove legacy `is_configured` and `validate_result` hooks
* change testing utils

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ services:
     volumes: &web_volumes
       - media:/app/media
       - private_media:/app/private_media
-      - ./docker/setup_configuration:/app/data
+      - ./docker/setup_configuration:/app/setup_configuration
       - log:/app/log
       - certifi_ca_bundle:/app/certifi_ca_bundle
     ports:
