--- a/docker/setup_configuration/data.yaml
+++ b/docker/setup_configuration/data.yaml
@@ -29,3 +29,28 @@ zgw_consumers:
     auth_type: zgw
     client_id: test_client_id
     secret: test_secret_key
+
+objects_api_config_enable: True
+objects_api:
+  groups:
+  - name: Config 1
+    identifier: config-1
+    objects_service_identifier: objecten-test
+    objecttypes_service_identifier: objecttypen-test
+    drc_service_identifier: documenten-test
+    catalogi_service_identifier: catalogi-test
+    catalogue_domain: TEST
+    catalogue_rsin: "000000000"
+    organisatie_rsin: "000000000"
+    iot_submission_report: PDF Informatieobjecttype
+    iot_submission_csv: CSV Informatieobjecttype
+    iot_attachment: Attachment Informatieobjecttype
+  - name: Config 2
+    identifier: config-2
+    objects_service_identifier: objecten-test
+    objecttypes_service_identifier: objecttypen-test
+    drc_service_identifier: documenten-test
+    catalogi_service_identifier: catalogi-test
+    catalogue_domain: OTHER
+    catalogue_rsin: "000000000"
+    organisatie_rsin: "000000000"
