:green_heart: [#4693] Fix interaction tests
The tests broke because of react-select now *always* being rendered
in a portal. Added a helper that encapsulates this logic so that
we don't need to worry about this in our actual test code.

--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "trailingComma": "es5",
     "useTabs": false,
     "importOrder": [
-      "^((api-mocks|components|data|formio|hooks|map|story-utils|types|utils)/(.*)|(api|api-mocks|cache|Context|errors|headers|i18n|sdk|sentry|types))$",
+      "^((api-mocks|components|data|formio|hooks|map|story-utils|types|utils)/(.*)|(api|api-mocks|cache|Context|errors|headers|i18n|sdk|sentry|story-utils|types))$",
       "^[./]"
     ],
     "importOrderSeparation": true,
