:recycle: [#4431] Refactor the Objects API v2 handler
The code was already starting to look like a rather fine Italian pasta
before the addressNL mapping because of component-specific handling of
values that was necessary, but now with the additional configuration
options specific to the component type, readability and maintainability
was in serious danger.

I've opted to look at the broader structure on what information we
need, what information we have and what it is exactly that we need
to do with the information:

* We know all the variable values (keys and value), coming from user
  input, derived from user input or entirely independent from user
  input.
* When we know the key of a variable and we know the variable source is
  a form component, we can look up the definition of the form
  component and pass it along as additional context
* We know some user input (file uploads) is processed differently _in
  the context of the objects API_ and we have data storage that allows
  us to translate
* We need to normalize some values to make them suitable for use in the
  Objects API, because a JSON Schema contract is used. Looking at you,
  file uploads with multiple=false.
* We may have additional mapping configuration for a specific variable,
  typically because the variable points to a particular component type
  with special requirements (looking at you, addressNL)
* We must be able to construct the record data for the objects API. The
  keys to be used are specified in the mapped variables configuration,
  namely the target paths.
* We must process all the mapped variables to construct the entire
  object to send to the API.
* We can map all kinds of variables (form, user defined, static,
  registration).

So, working backwards, what we needed was for each mapped variable to
make it return instructions which paths of the final object need to
be set to which value. This is solved with AssignmentSpec data classes,
they simply encode the {key: value} information i

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -26,13 +26,16 @@ include = [
     "src/openforms/formio/formatters/",
     # Payments
     "src/openforms/payments/models.py",
-    # Registrations
+    # Interaction with the outside world
     "src/openforms/contrib/zgw/service.py",
+    "src/openforms/contrib/objects_api/",
+    # Registrations
     "src/openforms/registrations/contrib/email/config.py",
     "src/openforms/registrations/contrib/email/plugin.py",
     "src/openforms/registrations/contrib/stuf_zds/options.py",
     "src/openforms/registrations/contrib/stuf_zds/plugin.py",
     "src/openforms/registrations/contrib/stuf_zds/typing.py",
+    "src/openforms/registrations/contrib/objects_api/handlers/",
     "src/openforms/registrations/contrib/objects_api/plugin.py",
     "src/openforms/registrations/contrib/objects_api/submission_registration.py",
     "src/openforms/registrations/contrib/objects_api/typing.py",
@@ -44,6 +47,8 @@ include = [
 ]
 exclude = [
     "**/__pycache__",
+    "src/openforms/contrib/objects_api/tests/",
+    "src/openforms/contrib/objects_api/json_schema.py",
     "src/openforms/formio/formatters/tests/",
     "src/openforms/registrations/contrib/zgw_apis/tests/test_backend_partial_failure.py",
     "src/openforms/registrations/contrib/zgw_apis/tests/test_utils.py",
