:recycle: [#4398] Update ownership check interface in registration plugin
The task/generic machinery takes care of deserializing the plugin
options and passes them to the hook for ownership verification, greatly
simplifying the code that needs to be implemented.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -30,6 +30,7 @@ include = [
     "src/openforms/contrib/zgw/service.py",
     "src/openforms/contrib/objects_api/",
     # Registrations
+    "src/openforms/registrations/tasks.py",
     "src/openforms/registrations/contrib/email/config.py",
     "src/openforms/registrations/contrib/email/plugin.py",
     "src/openforms/registrations/contrib/stuf_zds/options.py",
