:ok_hand: [#4787] Process PR feedback
* add type: ignore to specific lines in steps.py instead of ignoring entire file with pyright
* several docs improvements
* remove unused SCRIPTPATH variable in wait_for_db.sh and setup_configuration.sh
* move tests to objects_api.tests directory

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ src/openforms/static/sdk
 # Custom extensions symlinks
 src/prefill_haalcentraalhr
 src/token_exchange
+
+# docker volumes
+setup_configuration/*
+!setup_configuration/.gitkeep
