:whale: [#4788] Add example data for OIDC admin setupconfig to docker setup

--- a/docker/setup_configuration/data.yaml
+++ b/docker/setup_configuration/data.yaml
@@ -1,3 +1,36 @@
+oidc_db_config_enable: True
+oidc_db_config_admin_auth:
+  items:
+  - identifier: admin-oidc
+    enabled: True
+    oidc_rp_client_id: testid
+    oidc_rp_client_secret: 7DB3KUAAizYCcmZufpHRVOcD0TOkNO3I
+    oidc_rp_scopes_list:
+    - openid
+    - email
+    - profile
+    oidc_rp_sign_algo: RS256
+    endpoint_config:
+      oidc_op_discovery_endpoint: http://keycloak.open-forms.local:8080/realms/test/
+    username_claim:
+    - sub
+    groups_claim:
+    - roles
+    claim_mapping:
+      first_name:
+      - given_name
+    sync_groups: true
+    sync_groups_glob_pattern: "*"
+    default_groups:
+    - Functioneel beheer
+    make_users_staff: true
+    superuser_group_names:
+    - superuser
+    oidc_use_nonce: true
+    oidc_nonce_size: 32
+    oidc_state_size: 32
+    userinfo_claims_source: id_token
+
 zgw_consumers_config_enable: True
 zgw_consumers:
   services:
