:boom: [#3283] Remove conversion of form step URL to form step UUID
Fully qualified URLs to resolve a form step have been deprecated for
a while, since they're not portable across environments with different
base URLs.

Now the compatibility code is removed too, which may break old exports.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -24,6 +24,8 @@ include = [
     # Formio tooling
     "src/openforms/formio/typing/",
     "src/openforms/formio/formatters/",
+    # Core forms app
+    "src/openforms/forms/api/serializers/logic/action_serializers.py",
     # Payments
     "src/openforms/payments/models.py",
     # Interaction with the outside world
