:recycle: [#3457] Refactor payments module to apply plugin mechanism consistently
All other modules operate on the idea that the generic code populates
the plugin options from the generic information and the specified
options serializer, which allows plugins to be generically typed and
not needing to perform additional input validation or conversion from
the raw JSON data for the options to the Python/Django objects that
are easier to work with.

This does change the public API of the registry/plugins to take an
extra argument, but enables us to apply static type checking (which
already reveals some problems) and simpler plugin code.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -10,6 +10,7 @@ include = [
     "src/openforms/dmn/registry.py",
     "src/openforms/formio/registry.py",
     "src/openforms/formio/rendering/registry.py",
+    "src/openforms/payments/base.py",
     "src/openforms/payments/registry.py",
     "src/openforms/pre_requests/base.py",
     "src/openforms/pre_requests/registry.py",
@@ -29,6 +30,9 @@ include = [
     "src/openforms/forms/api/serializers/logic/action_serializers.py",
     # Payments
     "src/openforms/payments/models.py",
+    "src/openforms/payments/contrib/ogone/client.py",
+    "src/openforms/payments/contrib/ogone/plugin.py",
+    "src/openforms/payments/views.py",
     # Interaction with the outside world
     "src/openforms/contrib/zgw/service.py",
     "src/openforms/contrib/objects_api/",
