--- a/src/openforms/contrib/haal_centraal/tests/files/vcr_cassettes/BRPIntegrationTest/BRPIntegrationTest.test_brp_integration_prefill.yaml
+++ b/src/openforms/contrib/haal_centraal/tests/files/vcr_cassettes/BRPIntegrationTest/BRPIntegrationTest.test_brp_integration_prefill.yaml
@@ -34,37 +34,21 @@ interactions:
         augustus 1998"},"reden":{"code":"O","omschrijving":"overlijden"}},"overlijden":{"datum":{"type":"Datum","datum":"1998-08-15","langFormaat":"15
         augustus 1998"}},"verblijfplaats":{"type":"Adres","verblijfadres":{"korteStraatnaam":"Nieuwe
         Parklaan","huisnummer":58,"postcode":"2597LD"},"functieAdres":{"code":"W","omschrijving":"woonadres"},"datumVan":{"type":"Datum","datum":"1997-07-28","langFormaat":"28
-        juli 1997"}},"gemeenteVanInschrijving":{"code":"0518","omschrijving":"''s-Gravenhage"},"adressering":{"aanhef":"Geachte
-        heer Holthuizen","aanschrijfwijze":{"naam":"A.H. Holthuizen"},"gebruikInLopendeTekst":"de
+        juli 1997"}},"gemeenteVanInschrijving":{"code":"0518","omschrijving":"''s-Gravenhage"},"adressering":{"aanschrijfwijze":{"naam":"A.H.
+        Holthuizen"},"aanhef":"Geachte heer Holthuizen","gebruikInLopendeTekst":"de
         heer Holthuizen","adresregel1":"Nieuwe Parklaan 58","adresregel2":"2597 LD  ''S-GRAVENHAGE"},"partners":[{"naam":{"geslachtsnaam":"Wiegman"},"aangaanHuwelijkPartnerschap":{"datum":{"type":"Datum","datum":"1926-07-15","langFormaat":"15
         juli 1926"}}}]}]}'
     headers:
-      Access-Control-Allow-Headers:
-      - authorization,Access-Control-Allow-Origin,Content-Type,SOAPAction,apikey,Internal-Key,Authorization,ApiKey
-      Access-Control-Allow-Methods:
-      - POST
-      Access-Control-Allow-Origin:
-      - '*'
-      Access-Control-Expose-Headers:
-      - ''
       Connection:
       - keep-alive
-      Content-Encoding:
-      - gzip
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 26 Nov 2024 10:18:53 GMT
-      Request-ID:
-      - ''
+      - Thu, 19 Dec 2024 07:01:14 GMT
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains
       Transfer-Encoding:
       - chunked
-      Via:
-      - 1.1 someproxy-service-6c5cfd9db5-b5k8v
-      activityid:
-      - 23e4c82c-6315-461e-88c5-174df0df4c55
     status:
       code: 200
       message: ''
