--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -448,7 +448,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        start: ['2.7.4', '2.7.8']
+        start: ['2.8.2']
 
     steps:
       - uses: actions/checkout@v4
