--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -36,8 +36,7 @@ include = [
     "src/openforms/emails/templatetags/cosign_information.py",
     # Registrations
     "src/openforms/registrations/tasks.py",
-    "src/openforms/registrations/contrib/email/config.py",
-    "src/openforms/registrations/contrib/email/plugin.py",
+    "src/openforms/registrations/contrib/email/",
     "src/openforms/registrations/contrib/stuf_zds/options.py",
     "src/openforms/registrations/contrib/stuf_zds/plugin.py",
     "src/openforms/registrations/contrib/stuf_zds/typing.py",
