:ok_hand: [#4908] Process PR feedback
* Rename plugin from JSON to JSONDump
* Add required and noManageChildProps to ServiceSelect and FormVariableSelect because they are required and need to prevent some Field props being passed down to the children
* Remove max length of FormioVariableKeyField: it is based on a text field which has no length constraints
* Remove id field from RelativeAPIEndpoint TextInput: is managed automatically
* Remove Required from JSONDumpOptions: required is the default for TypedDict
* Add default value for relative_api_endpoint: guarantees that the key is always present, which gives a strict type definition
* Remove content type headers: is set automatically when using the json kwargs
* Replace 'Included/Not Included' text with icons: makes it easier for the user to see whether it is included.
* Revise JSONDumpVariableConfigurationEditor: use useFormikContext instead of useField, and clean up the on-change event
* Add initial form data: formData will be an empty object if we add a new object, which means the default values for the configuration fields are missing
* Add missing form and static variable properties in JSONDump story
* Refactor building the values object of the to be submitted data: tt is neater to build up what needs to be processed first, before doing the processing

--- a/docker/docker-compose.json-dump.yml
+++ b/docker/docker-compose.json-dump.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 
-name: json-registration
+name: json-dump
 
 services:
   flask_app:
-    build: ./json-registration
+    build: ./json-dump
     ports:
       - "80:80"
     volumes:
-      - ./json-registration/:/app/
+      - ./json-dump/:/app/
 
 networks:
   open-forms-dev:
